[package]
name = "port_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }

[lib]
name = "port_scanner"
path = "src/lib.rs"
